samples/_failures_safe/1761185556_e76bfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4dc06dc8.c: In function ‘main’:
./samples/SAFE/__tmp_4dc06dc8.c:168:5: error: expected declaration or statement at end of input
  168 |     printf("Tokens found:\n");
      |     ^~~~~~
